# SmolderingEngine

./: .gitignore  Build.lua  CMakeLists.txt  README.md  Smoldering Engine.sln  SmoulderingEngine.sln  SmoulderingEngine.vcxproj
Binaries/Intermediates/windows-x86_64/Debug/Engine/: Engine.exe.recipe  vc143.idb
Dependencies/: VulkanTexture.cpp  VulkanTexture.h  VulkanglTFModel.cpp  VulkanglTFModel.h
Dependencies/ktx/lib/: etcunpack.cxx  writer_v1.c
Dependencies/ktx/other_include/GL/: glcorearb.h
Engine/: Build-Engine.lua  Engine.vcxproj  SmolderingEngine.cpp  SmoulderingEngine.cpp
Engine/Application/: Build-Application.lua
Engine/Application/Source/: SmolderingEngine.cpp
Engine/Application/Source/Common/: Common.cpp  Common.h  VulkanFunctions.h  VulkanFunctionsList.inl
Engine/Application/Source/Objects/: Object.cpp  Object.h
Engine/Application/Source/Objects/GameObjects/: GameObject.cpp  GameObject.h
Engine/Application/Source/Other/Models/: Castle.gltf  Castle2.glb  Castle2.gltf  test.gltf
Engine/Application/Source/Rendering/: Renderer.cpp  Renderer.h
Engine/Application/Source/Rendering/Application/: WindowCreation.cpp  WindowCreation.h
Engine/Application/Source/Rendering/BuffersAndPools/: CommandBufferAndPool.cpp
Engine/Application/Source/Rendering/Camera/: Camera.h  (+1 more)
Engine/Application/Source/Window/: WindowManager.cpp  WindowManager.h
Engine/Common/: Common.cpp  Common.h  VulkanFunctions.cpp  VulkanFunctions.h  VulkanFunctionsList.inl
Engine/GUI/: Build-GUI.lua
Engine/Game/: Build-Application.lua
Engine/Game/Source/Input/: ApplicationInput.cpp  ApplicationInput.h
Engine/Game/Source/Window/: ApplicationWindow.cpp  ApplicationWindow.h
Engine/Renderer/: Build-Renderer.lua
Engine/Renderer/Source/Common/: VulkanFunctions.h
Engine/Renderer/Source/Rendering/: Renderer.cpp
Engine/Rendering/: Renderer.cpp  Renderer.h
Engine/Rendering/Application/: WindowCreation.cpp  WindowCreation.h
Engine/Rendering/BuffersAndPools/: CommandBufferAndPool.cpp  CommandBufferAndPool.h
Engine/Rendering/ImagePresentation/: SwapChain.cpp  SwapChain.h
Engine/Rendering/Instances/: InstancesAndDevices.cpp  InstancesAndDevices.h
Engine/Rendering/Instances/private/: VulkanInstance.cpp  VulkanRendering.cpp
Engine/Rendering/Instances/public/: VulkanInstance.h  VulkanRendering.h
Engine/Rendering/RenderPass/: RenderPass.cpp  RenderPass.h
Engine/Rendering/RenderPasses/private/: SwapChain.cpp
Engine/Rendering/RenderPasses/public/: SwapChain.h
Engine/Source/: SmolderingEngine.cpp
Engine/Source/Common/: Common.cpp  Common.h  VulkanFunctionsList.inl
Engine/Source/Rendering/: Renderer.cpp  Renderer.h
Engine/Source/Rendering/ImagePresentation/: SwapChain.cpp
Engine/Source/Rendering/Instances/: InstancesAndDevices.cpp  InstancesAndDevices.h
Engine/Source/Rendering/RenderPass/: RenderPass.cpp
Engine/Source/Window/: WindowManager.h
Engine/SystemChecks/: ValidationLayersAndExtensions.h
Engine/SystemChecks/private/: DeviceCheck.cpp  ValidationLayersAndExtensions.cpp
Engine/SystemChecks/public/: DeviceCheck.h  ValidationLayersAndExtensions.h
Engine/Window/: WindowManager.cpp
Setup/: Setup-Windows.bat
SmolderingEngine/: SmolderingEngine.sln  SmolderingEngine.vcxproj  SmolderingEngine.vcxproj.filters  main.cpp
SmolderingEngine/Engine/: main.cpp
SmolderingEngine/Engine/Private/Camera/: Camera.cpp
SmolderingEngine/Engine/Private/Collision/: CollisionManager.cpp
SmolderingEngine/Engine/Private/EngineLevel/: EngineLevelManager.cpp
SmolderingEngine/Engine/Private/Input/: InputManager.cpp
SmolderingEngine/Engine/Private/Object/: GameObject.cpp  Object.cpp
SmolderingEngine/Engine/Private/Rendering/: EngineGUIRenderer.cpp  LevelRenderer.cpp  Mesh.cpp  MeshModel.cpp  Renderer.cpp  SkyboxRenderer.cpp
SmolderingEngine/Engine/Public/Camera/: Camera.h
SmolderingEngine/Engine/Public/Collision/: CollisionManager.h
SmolderingEngine/Engine/Public/EngineLevel/: EngineLevelManager.h
SmolderingEngine/Engine/Public/Input/: InputManager.h
SmolderingEngine/Engine/Public/Object/: GameObject.h  Object.h
SmolderingEngine/Engine/Public/Rendering/: EngineGUIRenderer.h  LevelRenderer.h  Mesh.h  MeshModel.h  Renderer.h  SkyboxRenderer.h  Utilities.h
SmolderingEngine/Engine/Shaders/: CompileShaders.bat  CubemapSkyboxFragmentShader.frag  CubemapSkyboxVertexShader.vert  Shader.frag  Shader.vert  frag.spv  vert.spv
SmolderingEngine/Engine/Shaders/Compiled/: CubemapSkyboxFragmentShader.frag.spv  CubemapSkyboxVertexShader.vert.spv  Shader.frag.spv  Shader.vert.spv
SmolderingEngine/Engine/Source/: EngineManager.cpp  EngineManager.h  GameManager.h
SmolderingEngine/Game/Levels/: LevelVersionInfo.txt  defaultLevel.selevel  imgui.ini  level.selevel  newLevel.selevel  test.selevel
SmolderingEngine/Game/Models/: Attributions.txt
SmolderingEngine/Game/Models/House/: Heilig_Grab_Kapelle_C.mtl
SmolderingEngine/Game/Private/: Game.cpp
SmolderingEngine/Game/Public/: Game.h
SmolderingEngine/Game/Source/Private/: Game.cpp
SmolderingEngine/Game/Source/Public/: Game.h
SmolderingEngine/Game/Textures/: Attributions.txt
SmolderingEngine/Private/: main.cpp
SmolderingEngine/Private/Rendering/: Renderer.cpp
SmolderingEngine/Public/Rendering/: Renderer.h  Utilities.h
SmolderingEngine/Rendering/private/: Renderer.cpp
SmolderingEngine/Rendering/public/: Renderer.h
SmolderingEngine/SmolderingEngine/x64/Debug/: SmolderingEngine.exe.recipe  SmolderingEngine.ilk  vc143.idb
(+53 files in other folders)
